force-app/main/default/objects/SUTA_Quote__c/SUTA_Quote__c.object-meta.xml
<CustomObject>
    <label>SUTA Quote #</label>
    <nameField>
        <label>SUTA Quote #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUTA Quote #</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>