force-app/main/default/objects/SUTA_Quote__c/fields/After_UI_Wage_Limit__c.field-meta.xml
<CustomField>
    <fullName>After_UI_Wage_Limit__c</fullName>
    <formula>Proposal__r.Total_Bill_Rate_After_UI_Wage_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quote Type PEO w/o Comp or ASO:
Bill Rate - FUTA - SUTA Bill Rate</inlineHelpText>
    <label>After UI Wage Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>