force-app/main/default/objects/SUTA_Quote__c/fields/Display_State_Assessment_Fee_on_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Display_State_Assessment_Fee_on_Proposal__c</fullName>
    <formula>SUTA__r.State__r.Name &amp;&quot; WC State Assessment and Surcharge&quot;</formula>
    <label>Display State Assessment Fee on Proposal</label>
    <type>Text</type>
</CustomField>