force-app/main/default/objects/SUTA_Quote__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <formula>Text(SUTA__r.Entity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity</label>
    <type>Text</type>
</CustomField>