force-app/main/default/objects/SUTA_Quote__c/fields/Gross_Wages__c.field-meta.xml
<CustomField>
    <fullName>Gross_Wages__c</fullName>
    <label>Gross Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>