force-app/main/default/objects/SUTA_Quote__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>SUTA Quote #</relationshipLabel>
    <relationshipName>SUTA_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>