force-app/main/default/objects/SUTA_Quote__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <formula>IF(
ISPICKVAL( State__r.State_Classification__c , &quot;Master&quot;), &quot;Master&quot;,
IF(
ISPICKVAL( State__r.State_Classification__c , &quot;Monopolistic&quot;) ,&quot;Master&quot;,
IF(
ISPICKVAL( State__r.State_Classification__c , &quot;MCP&quot;) ,&quot;MCP - &quot;&amp;  State__r.State_Code__c , NULL)))</formula>
    <label>Policy Type</label>
    <type>Text</type>
</CustomField>