force-app/main/default/objects/SUTA_Quote__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipName>Locations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>