force-app/main/default/objects/SUTA_Quote__c/fields/Proposal_State_Assessment_and_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Proposal_State_Assessment_and_Surcharge__c</fullName>
    <formula>IF(
State_Assessment_Fee_Surcharge_Included__c = TRUE, &quot;Included&quot;,
IF(
State_Assessment_Fee_Surcharge_Included__c = FALSE  &amp;&amp;  NOT(ISBLANK(State_Assessment_Fee_and_Surcharge__c)) , TEXT( (State_Assessment_Fee_and_Surcharge__c * 100))&amp;&quot;%&quot;, null

))</formula>
    <inlineHelpText>Displays &quot;Included&quot; if the State Assessment Fee/Surcharge Included field is checked. If the field is not checked and theres a surcharge fee, the fee is displayed on the proposal.</inlineHelpText>
    <label>Proposal State Assessment and Surcharge</label>
    <type>Text</type>
</CustomField>