force-app/main/default/objects/SUTA_Quote__c/fields/Proposal_SUTA__c.field-meta.xml
<CustomField>
    <fullName>Proposal_SUTA__c</fullName>
    <formula>IF( 
ISPICKVAL(Reporting_Level__c, &quot;Client&quot;), &quot;Client Level&quot;,  text((SUTA_Bill_Rate__c*100))&amp;&quot;%&quot;)</formula>
    <inlineHelpText>Displays &quot;Client Level&quot; on the Proposal for client level states or the SUTA bill rate for PEO states.</inlineHelpText>
    <label>Proposal SUTA</label>
    <type>Text</type>
</CustomField>