force-app/main/default/objects/SUTA_Quote__c/fields/Proposal_SUTA_header__c.field-meta.xml
<CustomField>
    <fullName>Proposal_SUTA_header__c</fullName>
    <formula>IF(
 Proposal_SUTA__c = &quot;Client Level&quot;,  SUTA__r.State__r.State_Code__c &amp;&quot; State Unemployment Tax** (Up to wage limit)&quot;,SUTA__r.State__r.State_Code__c &amp; &quot; State Unemployment Tax (Up to wage limit)&quot;)</formula>
    <label>Proposal SUTA Header</label>
    <type>Text</type>
</CustomField>