force-app/main/default/objects/SUTA_Quote__c/fields/State_Assessment_Fee_and_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>State_Assessment_Fee_and_Surcharge__c</fullName>
    <formula>SUTA__r.State_Assessment_and_Surcharges__c</formula>
    <inlineHelpText>State Assessment Fee and Surcharge stored on the SUTA record.</inlineHelpText>
    <label>State Assessment Fee and Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>