force-app/main/default/objects/SUTA_Quote__c/fields/State_Assessment_Fee_Surcharge_Included__c.field-meta.xml
<CustomField>
    <fullName>State_Assessment_Fee_Surcharge_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State Assessment Fee/Surcharge Included</label>
    <type>Checkbox</type>
</CustomField>