force-app/main/default/objects/SUTA_Quote__c/fields/State_Classification__c.field-meta.xml
<CustomField>
    <fullName>State_Classification__c</fullName>
    <formula>text(State__r.State_Classification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Classification</label>
    <type>Text</type>
</CustomField>