force-app/main/default/objects/SUTA_Quote__c/fields/SUTA__c.field-meta.xml
<CustomField>
    <fullName>SUTA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUTA</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SUTA__c.State__c</field>
            <operation>equals</operation>
            <valueField>$Source.State__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SUTA__c</referenceTo>
    <relationshipLabel>SUTA Quote #</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>