force-app/main/default/objects/SUTA_Quote__c/fields/SUTA_Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>SUTA_Cost_Rate__c</fullName>
    <label>SUTA Cost Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>