force-app/main/default/objects/SUTA_Quote__c/fields/SUTA_Rate__c.field-meta.xml
<CustomField>
    <fullName>SUTA_Rate__c</fullName>
    <formula>SUTA__r.Rate__c</formula>
    <label>SUTA Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>