force-app/main/default/objects/SUTA_Quote__c/fields/Taxable_Wages__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Wages__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Taxable Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>