force-app/main/default/objects/SUTA_Quote__c/fields/Total_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Rate__c</fullName>
    <formula>Proposal__r.Total_Bill_Rate__c + SUTA_Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Proposal Total Bill Rate + SUTA Bill Rate</inlineHelpText>
    <label>Total Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>