force-app/main/default/objects/SUTA_Quote__c/fields/Total_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Employees__c</fullName>
    <formula>IF(
ISPICKVAL( Proposal__r.Quote_Type__c , &quot;PEO&quot;),  Total_WC_Number_of_Employees__c ,
IF(
ISPICKVAL( Proposal__r.Quote_Type__c , &quot;PEO W/O COMP&quot;),   of_Employees__c  ,
IF(
ISPICKVAL( Proposal__r.Quote_Type__c , &quot;ASO&quot;),   of_Employees__c  , NULL)))</formula>
    <label>Total # of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>