force-app/main/default/objects/SUTA_Quote__c/fields/Total_WC_Gross_Wages__c.field-meta.xml
<CustomField>
    <fullName>Total_WC_Gross_Wages__c</fullName>
    <label>Total WC Gross Wages</label>
    <summarizedField>WC_Rate__c.Gross_Wages__c</summarizedField>
    <summaryForeignKey>WC_Rate__c.SUTA_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>