force-app/main/default/objects/SUTA_Quote__c/fields/Total_WC_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_WC_Number_of_Employees__c</fullName>
    <label>Total WC # of Employees</label>
    <summarizedField>WC_Rate__c.Total_Employees__c</summarizedField>
    <summaryForeignKey>WC_Rate__c.SUTA_Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>