force-app/main/default/objects/SUTA_Quote__c/fields/Trion_SUTA_Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Trion_SUTA_Bill_Amount__c</fullName>
    <formula>Total_Taxable_Wages__c  *  SUTA_Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Taxable Wages * SUTA Bill Rate</inlineHelpText>
    <label>Trion SUTA Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>