force-app/main/default/objects/SUTA_Quote__c/fields/Trion_SUTA_Cost__c.field-meta.xml
<CustomField>
    <fullName>Trion_SUTA_Cost__c</fullName>
    <formula>Total_Taxable_Wages__c * SUTA_Cost_Rate__c</formula>
    <inlineHelpText>Total Taxable Wages * SUTA Cost Rate</inlineHelpText>
    <label>Trion SUTA Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>