force-app/main/default/objects/SUTA_Quote__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipLabel>SUTA Quote #</relationshipLabel>
    <relationshipName>SUTA_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>