force-app/main/default/objects/SUTA_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reporting_Level__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Proposal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>